--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,3 +37,12 @@
   
   transform: translate(-50%, -50%);
 }
+.congrats{
+  padding:5px;
+  font-style:italic;
+  text-align:center;
+}
+.playAgainButton {
+ 
+ border-radius:5px;
+}
