--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,33 +1,44 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+body{
+    background: black;
+    font-size: 1rem;
+    background: #454545;
+    text-shadow: 2px 2px green;
+  color: yellowgreen;
 
-*/
 
+
+}
+button {
+    background: #6d5959;
+}
+.modal-content{
+    background: #6d5959;
+}
 .gameArea {
-  min-height: 40vh;
-  min-width: 40vw;
-  max-height: 40vh;
-  max-width: 40vw;
+  margin-top: 40px;
+  min-height: 50vh;
+  min-width: 50vw;
+  max-height: 60vh;
+  max-width: 60vw;
   margin: auto;
   justify-content:center;
+  margin-bottom: 10%;
+  margin-top:10%;
+  
 }
 
 .gameBox {
   min-height: 33%;
   min-width: 33%;
-  background: red;
+  font-size:2rem;
   text-align: center;
   padding:10%;
-  border:1px solid  black;
+  text-shadow: 2px 2px green;
+  color: yellowgreen;
+  
   
 }
 .centered {
@@ -45,4 +56,13 @@
 .playAgainButton {
  
  border-radius:5px;
+}
+.bl{
+  border-left:3px groove greenyellow;
+}
+.bb{
+  border-bottom:3px groove greenyellow;
+}
+.br{
+  border-right:3px groove greenyellow;
 }
